
Package: R.utils
================

Version: 1.7.1 [2011-03-18]
o The automatic archiving of devEval() is not considered unless
  the R.archive package is loaded, regardless of option settings.
o DOCUMENTATION: The title of help(devDone) was incorrect.


Version: 1.7.0 [2011-03-10]
o Now argument 'aspectRatio' of devNew() defaults to 1 (not NULL).
o Added setOption(), the "set version" of getOption().
o Added env() for creating an environment and evaluating an
  expression inside of it in one go.
o Added argument 'path' to sourceTo().
o REPRODUCIBLE RESEARCH: Now devEval() archives any generated
  image files if R.archive option 'devEval' is TRUE.
o BUG FIX: sourceTo() would not work for URLs.


Version: 1.6.6 [2011-03-08]
o Now Arguments$getWritablePath(NULL) returns NULL without asserting
  write permission, which is analogue to how it is done with
  Arguments$getReadablePath(NULL).
o Added argument 'timestamp' to printf() for Verbose so that the
  timestamp can be turned off/on explicitly as for cat().


Version: 1.6.5 [2011-03-03]
o Added trial version of createFileAtomically() for creating files
  atomically, by writing to a temporary file which is then renamed.
o Added trial versions of push-, popBackupFile() for backing up
  and restoring a file.
o Added trial versions of push-, popTemporaryFile() for working
  toward a temporary file.
o Added trial version of renameFile(), which to additional
  validation afterward.


Version: 1.6.4 [2011-02-28]
o (Incomplete revision submitted to CRAN by mistake)


Version: 1.6.3 [2011-02-20]
o Added argument 'par' to devNew() for applying graphical parameters
  at the same time as the device is opened, which is especially
  useful when using devEval().
o Changed argument 'force' of devEval() to default to TRUE.


Version: 1.6.2 [2011-02-14]
o Added trial version of devEval() for simple creation of images.
o Added argument 'aspectRatio' to devNew(), which updates/sets